sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1: error: not found: value cocktailSort
		cocktailSort();
                ^AlgCocktailSort1:3: error: not found: value len
for (i<- len-2 to 0) {
         ^