sort.basic.cocktail.AlgCocktailSort1.scala.code

for (i<- len-2 to 0) {
    	if (plusPetitQue(i+1,i)) {
      	echange(i,i+1)
} 
}  
     
     
     